Restructure project folders and update files

--- a/pages/threecolumn.html
+++ b/pages/threecolumn.html
@@ -4,22 +4,22 @@
 		<title>Halcyonic Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="../assets/css/style.css" />
 	</head>
 	<body>
 
-		<div id="header">
-			<div class="container">
-
+		<div id="hero-bg">
+			<div id="header">
+			  <div class="container">
 				<h1><a href="index.html">Halcyonic</a></h1>
-
 				<nav id="nav">
-                    <a href="index.html">Homepage</a>
-                    <a href="threecolumn.html">Three Column</a>
-                    <a href="twocolumn1.html">Two Column #1</a>
-                    <a href="twocolumn2.html">Two Column #2</a>
-                    <a href="onecolumn.html">One Column</a> </nav>
-
+				  <a href="index.html">Homepage</a>
+				  <a href="threecolumn.html">Three Column</a>
+				  <a href="twocolumn1.html">Two Column #1</a>
+				  <a href="twocolumn2.html">Two Column #2</a>
+				  <a href="onecolumn.html">One Column</a>
+				</nav>
+			  </div>
 			</div>
 		</div>
 
