--- a/pages/index.html
+++ b/pages/index.html
@@ -4,43 +4,40 @@
 		<title>Halcyonic Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../assets/css/style.css" />
 	</head>
 	<body>
 
-		<div id="header">
-			<div class="container">
-
+		<div id="hero-bg">
+			<div id="header">
+			  <div class="container">
 				<h1><a href="index.html">Halcyonic</a></h1>
-
 				<nav id="nav">
-					<a href="index.html">Homepage</a>
-					<a href="threecolumn.html">Three Column</a>
-					<a href="twocolumn1.html">Two Column #1</a>
-					<a href="twocolumn2.html">Two Column #2</a>
-					<a href="onecolumn.html">One Column</a> </nav>
-
+				  <a href="index.html">Homepage</a>
+				  <a href="threecolumn.html">Three Column</a>
+				  <a href="twocolumn1.html">Two Column #1</a>
+				  <a href="twocolumn2.html">Two Column #2</a>
+				  <a href="onecolumn.html">One Column</a>
+				</nav>
+			  </div>
 			</div>
-		</div>
 
-		<div id="banner">
-			<div class="container">
+			<div id="banner">
+			  <div class="container">
 				<div class="row">
-
-					<div class="col-6 col-12-medium">
-						<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-						<a href="#" class="button-large">Go on, click me!</a>
-					</div>
-
-					<div class="col-6 col-12-medium">
-						<a href="#" class="bordered-feature-image">
-                            <img src="images/banner.jpg" alt="" />
-                        </a>
-					</div>
-
+				  <div class="col-6 col-12-medium">
+					<p>We do something really useful, important, and unique. Learn all about it here ...</p>
+					<a href="#" class="button-large">Go on, click me!</a>
+				  </div>
+				  <div class="col-6 col-12-medium">
+					<a href="#" class="bordered-feature-image">
+					  <img src="../assets/images/banner.jpg" alt="" />
+					</a>
+				  </div>
 				</div>
+			  </div>
 			</div>
-		</div>
+		  </div>
 
 		<div id="features">
 			<div class="container">
@@ -48,7 +45,7 @@
 
 					<div class="col-3 col-6-medium col-12-small">
 						<section>
-							<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="bordered-feature-image"><img src="../assets/images/pic01.jpg" alt="" /></a>
 							<h2>Welcome to Halcyonic</h2>
 							<p>
                                 This is <strong>Halcyonic</strong>, a free site template
@@ -61,7 +58,7 @@
 
 					<div class="col-3 col-6-medium col-12-small">
 						<section>
-							<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="#" class="bordered-feature-image"><img src="../assets/images/pic02.jpg" alt="" /></a>
 							<h2>Responsive You Say?</h2>
 							<p>
                                 Yes! Halcyonic is built to be fully responsive so it looks great
@@ -72,7 +69,7 @@
 
 					<div class="col-3 col-6-medium col-12-small">
 						<section>
-							<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="#" class="bordered-feature-image"><img src="../assets/images/pic03.jpg" alt="" /></a>
 							<h2>License Info</h2>
 							<p>
                                 Halcyonic is licensed under the <a href="https://html5up.net/license">CCA</a> license,
@@ -84,7 +81,7 @@
 
 					<div class="col-3 col-6-medium col-12-small">
 						<section>
-							<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="#" class="bordered-feature-image"><img src="../assets/images/pic04.jpg" alt="" /></a>
 							<h2>Volutpat etiam aliquam</h2>
 							<p>
                                 Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
@@ -107,7 +104,7 @@
 								<h2>Who We Are</h2>
 								<h3>A subheading about who we are</h3>
 							</header>
-							<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="#" class="feature-image"><img src="../assets/images/pic05.jpg" alt="" /></a>
 							<p>
                                 Duis neque nisi, dapibus sed mattis quis, rutrum accumsan magna sed.
                                 Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
@@ -140,17 +137,17 @@
 							</header>
 							<ul class="quote-list">
 								<li>
-									<img src="images/pic06.jpg" alt="" />
+									<img src="../assets/images/pic06.jpg" alt="" />
 									<p>"Neque nisidapibus mattis"</p>
 									<span>Jane Doe, CEO of UntitledCorp</span>
 								</li>
 								<li>
-									<img src="images/pic07.jpg" alt="" />
+									<img src="../assets/images/pic07.jpg" alt="" />
 									<p>"Lorem ipsum consequat!"</p>
 									<span>John Doe, President of FakeBiz</span>
 								</li>
 								<li>
-									<img src="images/pic08.jpg" alt="" />
+									<img src="../assets/images/pic08.jpg" alt="" />
 									<p>"Magna veroeros amet tempus"</p>
 									<span>Mary Smith, CFO of UntitledBiz</span>
 								</li>
