--- a/pages/twocolumn1.html
+++ b/pages/twocolumn1.html
@@ -4,28 +4,52 @@
 		<title>Halcyonic Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="../assets/css/style.css" />
 	</head>
 	<body>
 
-		<div id="header">
-			<div class="container">
-
+		<div id="hero-bg">
+			<div id="header">
+			  <div class="container">
 				<h1><a href="index.html">Halcyonic</a></h1>
-
 				<nav id="nav">
-                    <a href="index.html">Homepage</a>
-                    <a href="threecolumn.html">Three Column</a>
-                    <a href="twocolumn1.html">Two Column #1</a>
-                    <a href="twocolumn2.html">Two Column #2</a>
-                    <a href="onecolumn.html">One Column</a> </nav>
-
+				  <a href="index.html">Homepage</a>
+				  <a href="threecolumn.html">Three Column</a>
+				  <a href="twocolumn1.html">Two Column #1</a>
+				  <a href="twocolumn2.html">Two Column #2</a>
+				  <a href="onecolumn.html">One Column</a>
+				</nav>
+			  </div>
 			</div>
 		</div>
 
 		<div id="content">
             <div class="container">
                 <div class="row">
+
+                    <div class="col-9 col-12-medium">
+                        <section>
+                            <header>
+                                <h2>Two Column #1</h2>
+                                <h3>A generic two column layout</h3>
+                            </header>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero, sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
+                            </p>
+                            <p>
+                                Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend hendrerit.
+                            </p>
+                            <p>
+                                Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
+                            </p>
+                            <p>
+                                Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend hendrerit.
+                            </p>
+                            <p>
+                                Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
+                            </p>
+                        </section>
+                    </div>
 
                     <div class="col-3 col-12-medium">
 
@@ -58,30 +82,6 @@
                             </ul>
                         </section>
 
-                    </div>
-
-                    <div class="col-9 col-12-medium">
-                        <section>
-                            <header>
-                                <h2>Two Column #2</h2>
-                                <h3>Another generic two column layout</h3>
-                            </header>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero, sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
-                            </p>
-                            <p>
-                                Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend hendrerit.
-                            </p>
-                            <p>
-                                Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-                            </p>
-                            <p>
-                                Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend hendrerit.
-                            </p>
-                            <p>
-                                Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-                            </p>
-                        </section>
                     </div>
 
                 </div>
